Fix spacing of help button

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -268,6 +268,7 @@ a {
     color: black;
     width: 30px;
     justify-content: center;
+    margin-right: 5px;
 }
 
 .maze-controls__group__help:hover {
